k3s/apps/vscode/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vscode
  labels: { app.kubernetes.io/name: vscode }
